# cmake-examples

07-package-management/E-dependency-of-packages/: CMakeLists.txt
07-package-management/E-dependency-of-packages/advance/: CMakeLists.txt
07-package-management/E-dependency-of-packages/advance/include/advance/: advance.h
07-package-management/E-dependency-of-packages/basic/: CMakeLists.txt
07-package-management/E-dependency-of-packages/basic/include/basic/: basic.h
07-package-management/E-dependency-of-packages/basic/src/: basic.cpp
07-package-management/E-dependency-of-packages/cmake/: FindBasic.cmake
07-package-management/E-dependency-of-packages/source/: CMakeLists.txt  main.cpp
